<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/background_picture">

    <LinearLayout
        android:id="@+id/registration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/c_registration_LoginTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/orange"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/c_registration_LoginET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/c_registration_PasswordTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/orange"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/c_registration_PasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/c_registration_NameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textColor="@color/orange"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/c_registration_NameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/c_registration_SurnameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/surname"
            android:textColor="@color/orange"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/c_registration_SurnameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/c_registration_EmailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="@color/orange"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/c_registrationEmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/editregistrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dip"
            android:layout_marginEnd="10dip"
            android:text="@string/register_uppercase"
            android:textColor="@color/orange"/>

    </LinearLayout>

</ScrollView>
