<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp">

    <TextView
        android:id="@+id/row_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_whatsapp_date"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/the_date"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/row_date"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:background="@drawable/bubble_green">

        <TextView
            android:id="@+id/row_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/row_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/the_hour"
                android:textColor="@color/grey2"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/content_description"
                android:scaleType="fitCenter"
                android:src="@drawable/one_check_mark_grey" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/content_description"
                android:scaleType="fitCenter"
                android:src="@drawable/two_check_marks_grey"
                android:visibility="gone" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/content_description"
                android:scaleType="fitCenter"
                android:src="@drawable/two_check_marks_blue"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout> 

